--- a/index.html
+++ b/index.html
@@ -9,19 +9,18 @@
 </head>
 
 <body>
-    <div class="div-container1">
+    <nav>
         <h1>library</h1>
         <button class="log-btn">Log in</button>
-    </div>
+    </nav>
+
+
     <div class="addbook-buton-div">
-        <button class="addbook-buton">+ Add Book
+        <button class="addbook-buton">+ Add Book</button>
     </div>
-    <div class="card-div">
+    <div class="card-div"></div>
 
-    </div>
-
-    </button>
-    <form class="form-divcontainer">
+    <form class="form-card">
         <h2>Add new book</h2>
         <input type="text" placeholder="Title" id="title" required><br><br>
         <input type="text" placeholder="Author" id="author" required><br><br>
@@ -32,9 +31,10 @@
         </div><br>
         <input class="submit-button" type="button" value="Submit"><br><br>
     </form>
+
     <footer class="footer">
         <p>Copyright @ 2024 michalosman</p>
-        <img class="footer-img" src="github-logo.png" alt="git-icon">
+        <img class="footer-img" src="github-icon.ico" alt="github-icon">
     </footer>
 
 </body>
