add some changes of cards height & width

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     </nav>
 
 
-    <div class="addbook-buton-div">
-        <button class="addbook-buton">+ Add Book</button>
+    <div class="addbook-button-div">
+        <button class="addbook-button">+ Add Book</button>
     </div>
     <div class="card-div"></div>
 
@@ -26,8 +26,8 @@
         <input type="text" placeholder="Author" id="author" required><br><br>
         <input min="1" type="number" placeholder="Page" id="page" required><br><br>
         <div class="form-div">
-            <label for="fname">Have you read it?</label><br>
-            <input type="checkbox" id="fname" name="fname" required><br><br>
+            <label for="frame">Have you read it?</label><br>
+            <input type="checkbox" id="frame" name="frame" required><br><br>
         </div><br>
         <input class="submit-button" type="button" value="Submit"><br><br>
     </form>
